parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program1 program
Rule 2     program -> program1
Rule 3     program1 -> body NLINE
Rule 4     program1 -> NLINE
Rule 5     body -> class
Rule 6     body -> function
Rule 7     body -> declaration
Rule 8     class -> CLASS ID class_block
Rule 9     class -> CLASS ID COLON ID class_block
Rule 10    function -> FUNC ID add_function params set_void init_block end_function
Rule 11    function -> FUNC ID add_function params ARROW variable_primitive init_block end_function
Rule 12    function -> FUNC ID error init_block
Rule 13    declaration -> variable ASSIGN push_operator bool_expr execute_priority_0
Rule 14    declaration -> variable ASSIGN array
Rule 15    declaration -> variable
Rule 16    declaration -> variable error NLINE
Rule 17    array -> LBRACK array1 RBRACK
Rule 18    array1 -> expression COMMA array1
Rule 19    array1 -> expression
Rule 20    params -> LPAREN params1 RPAREN
Rule 21    params -> LPAREN RPAREN
Rule 22    params -> LPAREN error RPAREN
Rule 23    params1 -> param
Rule 24    params1 -> param COMMA params1
Rule 25    params1 -> error COMMA params1
Rule 26    param -> ID add_param COLON variable_primitive
Rule 27    param -> ID error variable_primitive
Rule 28    param -> error COLON variable_primitive
Rule 29    class_block -> LCURLY class_block1 RCURLY
Rule 30    class_block1 -> class_block2
Rule 31    class_block1 -> class_block3 class_block2
Rule 32    class_block2 -> NLINE class_block1
Rule 33    class_block2 -> NLINE
Rule 34    class_block3 -> function
Rule 35    class_block3 -> declaration
Rule 36    init_block -> LCURLY init_block1 RCURLY
Rule 37    init_block1 -> init_block2
Rule 38    init_block1 -> init_block3 init_block2
Rule 39    init_block2 -> NLINE init_block1
Rule 40    init_block2 -> NLINE
Rule 41    init_block3 -> statement
Rule 42    init_block3 -> declaration
Rule 43    block -> LCURLY block1 RCURLY
Rule 44    block1 -> block2
Rule 45    block1 -> statement block2
Rule 46    block2 -> NLINE block1
Rule 47    block2 -> NLINE
Rule 48    statement -> display
Rule 49    statement -> if
Rule 50    statement -> while
Rule 51    statement -> input
Rule 52    statement -> assign
Rule 53    statement -> call
Rule 54    statement -> return
Rule 55    statement -> error
Rule 56    while -> WHILE LPAREN save_loop_start bool_expr set_loop_condition RPAREN block fill_and_reset_loop
Rule 57    input -> variable ASSIGN INPUT LPAREN string RPAREN
Rule 58    display -> PRINT push_operator LPAREN bool_expr RPAREN execute_builtin_call
Rule 59    return -> RETURN
Rule 60    return -> RETURN push_operator bool_expr set_return
Rule 61    assign -> ID push_variable assign1 bool_expr execute_priority_0
Rule 62    assign -> ID push_variable error execute_priority_0
Rule 63    assign -> ID push_variable assign1 error execute_priority_0
Rule 64    assign1 -> ASSIGN push_operator
Rule 65    assign1 -> PASSIGN
Rule 66    assign1 -> LASSIGN
Rule 67    assign1 -> MASSIGN
Rule 68    assign1 -> DASSIGN
Rule 69    call -> ID LPAREN call1 RPAREN
Rule 70    call1 -> expression
Rule 71    call1 -> expression COMMA call1
Rule 72    if -> if_single
Rule 73    if -> if_multiple
Rule 74    if_single -> IF LPAREN bool_expr RPAREN get_conditional block fill_end_single
Rule 75    if_multiple -> IF LPAREN bool_expr RPAREN get_conditional block if_multiple_2
Rule 76    if_multiple_2 -> fill_and_goto ELSE if_multiple
Rule 77    if_multiple_2 -> fill_and_goto ELSE block fill_end
Rule 78    bool_expr -> relational_exp execute_priority_1
Rule 79    bool_expr -> relational_exp execute_priority_1 AND push_operator bool_expr
Rule 80    bool_expr -> relational_exp execute_priority_1 OR push_operator bool_expr
Rule 81    relational_exp -> expression execute_priority_2 comp relational_exp
Rule 82    relational_exp -> expression execute_priority_2
Rule 83    expression -> term execute_priority_3
Rule 84    expression -> term execute_priority_3 PLUS push_operator expression
Rule 85    expression -> term execute_priority_3 MINUS push_operator expression
Rule 86    term -> factor execute_priority_4
Rule 87    term -> factor execute_priority_4 TIMES push_operator term
Rule 88    term -> factor execute_priority_4 DIVIDE push_operator term
Rule 89    term -> factor execute_priority_4 TIMES error push_operator term
Rule 90    term -> factor execute_priority_4 DIVIDE error push_operator term
Rule 91    factor -> constant
Rule 92    factor -> LPAREN push_operator bool_expr RPAREN push_operator
Rule 93    factor -> LPAREN push_operator error RPAREN push_operator
Rule 94    call_array -> ID LBRACK expression RBRACK
Rule 95    constant -> INTLIT add_constant
Rule 96    constant -> FLOATLIT add_constant
Rule 97    constant -> BOOLLIT add_constant
Rule 98    constant -> string
Rule 99    constant -> call
Rule 100   constant -> call_array
Rule 101   constant -> constant2
Rule 102   constant2 -> ID push_variable
Rule 103   constant2 -> ID PERIOD constant2
Rule 104   comp -> LESS push_operator
Rule 105   comp -> MORE push_operator
Rule 106   comp -> EQUALS push_operator
Rule 107   comp -> NEQUALS push_operator
Rule 108   comp -> LEQUALS push_operator
Rule 109   comp -> MEQUALS push_operator
Rule 110   variable -> VAR ID add_var COLON type
Rule 111   variable -> VAR ID error type
Rule 112   variable -> VAR ID add_var COLON error NLINE
Rule 113   type -> variable_primitive
Rule 114   type -> LBRACK variable_primitive RBRACK
Rule 115   type -> LBRACK ID RBRACK
Rule 116   variable_primitive -> INT set_variable_type
Rule 117   variable_primitive -> FLOAT set_variable_type
Rule 118   variable_primitive -> STRING set_variable_type
Rule 119   variable_primitive -> BOOL set_variable_type
Rule 120   string -> string_expr
Rule 121   string -> string_expr string
Rule 122   string_expr -> STRINGLIT add_constant
Rule 123   string_expr -> BSLASH LPAREN expression RPAREN
Rule 124   add_function -> <empty>
Rule 125   set_void -> <empty>
Rule 126   set_return -> <empty>
Rule 127   end_function -> <empty>
Rule 128   add_constant -> <empty>
Rule 129   add_param -> <empty>
Rule 130   add_var -> <empty>
Rule 131   execute_priority_0 -> <empty>
Rule 132   execute_builtin_call -> <empty>
Rule 133   execute_priority_1 -> <empty>
Rule 134   execute_priority_2 -> <empty>
Rule 135   execute_priority_3 -> <empty>
Rule 136   execute_priority_4 -> <empty>
Rule 137   get_conditional -> <empty>
Rule 138   fill_and_goto -> <empty>
Rule 139   fill_end -> <empty>
Rule 140   fill_end_single -> <empty>
Rule 141   save_loop_start -> <empty>
Rule 142   set_loop_condition -> <empty>
Rule 143   fill_and_reset_loop -> <empty>
Rule 144   push_operator -> <empty>
Rule 145   push_variable -> <empty>
Rule 146   set_variable_type -> <empty>

Terminals, with rules where they appear

AND                  : 79
ARROW                : 11
ASSIGN               : 13 14 57 64
BOOL                 : 119
BOOLLIT              : 97
BSLASH               : 123
CLASS                : 8 9
COLON                : 9 26 28 110 112
COMMA                : 18 24 25 71
DASSIGN              : 68
DIVIDE               : 88 90
ELSE                 : 76 77
EQUALS               : 106
FLOAT                : 117
FLOATLIT             : 96
FUNC                 : 10 11 12
ID                   : 8 9 9 10 11 12 26 27 61 62 63 69 94 102 103 110 111 112 115
IF                   : 74 75
INPUT                : 57
INT                  : 116
INTLIT               : 95
LASSIGN              : 66
LBRACK               : 17 94 114 115
LCURLY               : 29 36 43
LEQUALS              : 108
LESS                 : 104
LPAREN               : 20 21 22 56 57 58 69 74 75 92 93 123
MASSIGN              : 67
MEQUALS              : 109
MINUS                : 85
MORE                 : 105
NEQUALS              : 107
NLINE                : 3 4 16 32 33 39 40 46 47 112
OR                   : 80
PASSIGN              : 65
PERIOD               : 103
PLUS                 : 84
PRINT                : 58
RBRACK               : 17 94 114 115
RCURLY               : 29 36 43
RETURN               : 59 60
RPAREN               : 20 21 22 56 57 58 69 74 75 92 93 123
STRING               : 118
STRINGLIT            : 122
TIMES                : 87 89
VAR                  : 110 111 112
WHILE                : 56
error                : 12 16 22 25 27 28 55 62 63 89 90 93 111 112

Nonterminals, with rules where they appear

add_constant         : 95 96 97 122
add_function         : 10 11
add_param            : 26
add_var              : 110 112
array                : 14
array1               : 17 18
assign               : 52
assign1              : 61 63
block                : 56 74 75 77
block1               : 43 46
block2               : 44 45
body                 : 3
bool_expr            : 13 56 58 60 61 74 75 79 80 92
call                 : 53 99
call1                : 69 71
call_array           : 100
class                : 5
class_block          : 8 9
class_block1         : 29 32
class_block2         : 30 31
class_block3         : 31
comp                 : 81
constant             : 91
constant2            : 101 103
declaration          : 7 35 42
display              : 48
end_function         : 10 11
execute_builtin_call : 58
execute_priority_0   : 13 61 62 63
execute_priority_1   : 78 79 80
execute_priority_2   : 81 82
execute_priority_3   : 83 84 85
execute_priority_4   : 86 87 88 89 90
expression           : 18 19 70 71 81 82 84 85 94 123
factor               : 86 87 88 89 90
fill_and_goto        : 76 77
fill_and_reset_loop  : 56
fill_end             : 77
fill_end_single      : 74
function             : 6 34
get_conditional      : 74 75
if                   : 49
if_multiple          : 73 76
if_multiple_2        : 75
if_single            : 72
init_block           : 10 11 12
init_block1          : 36 39
init_block2          : 37 38
init_block3          : 38
input                : 51
param                : 23 24
params               : 10 11
params1              : 20 24 25
program              : 1 0
program1             : 1 2
push_operator        : 13 58 60 64 79 80 84 85 87 88 89 90 92 92 93 93 104 105 106 107 108 109
push_variable        : 61 62 63 102
relational_exp       : 78 79 80 81
return               : 54
save_loop_start      : 56
set_loop_condition   : 56
set_return           : 60
set_variable_type    : 116 117 118 119
set_void             : 10
statement            : 41 45
string               : 57 98 121
string_expr          : 120 121
term                 : 83 84 85 87 88 89 90
type                 : 110 111
variable             : 13 14 15 16 57
variable_primitive   : 11 26 27 28 113 114
while                : 50


state 0

    (0) S' -> . program
    (1) program -> . program1 program
    (2) program -> . program1
    (3) program1 -> . body NLINE
    (4) program1 -> . NLINE
    (5) body -> . class
    (6) body -> . function
    (7) body -> . declaration
    (8) class -> . CLASS ID class_block
    (9) class -> . CLASS ID COLON ID class_block
    (10) function -> . FUNC ID add_function params set_void init_block end_function
    (11) function -> . FUNC ID add_function params ARROW variable_primitive init_block end_function
    (12) function -> . FUNC ID error init_block
    (13) declaration -> . variable ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> . variable ASSIGN array
    (15) declaration -> . variable
    (16) declaration -> . variable error NLINE
    (110) variable -> . VAR ID add_var COLON type
    (111) variable -> . VAR ID error type
    (112) variable -> . VAR ID add_var COLON error NLINE

    NLINE           shift and go to state 4
    CLASS           shift and go to state 8
    FUNC            shift and go to state 9
    VAR             shift and go to state 11

    program                        shift and go to state 1
    program1                       shift and go to state 2
    body                           shift and go to state 3
    class                          shift and go to state 5
    function                       shift and go to state 6
    declaration                    shift and go to state 7
    variable                       shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> program1 . program
    (2) program -> program1 .
    (1) program -> . program1 program
    (2) program -> . program1
    (3) program1 -> . body NLINE
    (4) program1 -> . NLINE
    (5) body -> . class
    (6) body -> . function
    (7) body -> . declaration
    (8) class -> . CLASS ID class_block
    (9) class -> . CLASS ID COLON ID class_block
    (10) function -> . FUNC ID add_function params set_void init_block end_function
    (11) function -> . FUNC ID add_function params ARROW variable_primitive init_block end_function
    (12) function -> . FUNC ID error init_block
    (13) declaration -> . variable ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> . variable ASSIGN array
    (15) declaration -> . variable
    (16) declaration -> . variable error NLINE
    (110) variable -> . VAR ID add_var COLON type
    (111) variable -> . VAR ID error type
    (112) variable -> . VAR ID add_var COLON error NLINE

    $end            reduce using rule 2 (program -> program1 .)
    NLINE           shift and go to state 4
    CLASS           shift and go to state 8
    FUNC            shift and go to state 9
    VAR             shift and go to state 11

    program1                       shift and go to state 2
    program                        shift and go to state 12
    body                           shift and go to state 3
    class                          shift and go to state 5
    function                       shift and go to state 6
    declaration                    shift and go to state 7
    variable                       shift and go to state 10

state 3

    (3) program1 -> body . NLINE

    NLINE           shift and go to state 13


state 4

    (4) program1 -> NLINE .

    NLINE           reduce using rule 4 (program1 -> NLINE .)
    CLASS           reduce using rule 4 (program1 -> NLINE .)
    FUNC            reduce using rule 4 (program1 -> NLINE .)
    VAR             reduce using rule 4 (program1 -> NLINE .)
    $end            reduce using rule 4 (program1 -> NLINE .)


state 5

    (5) body -> class .

    NLINE           reduce using rule 5 (body -> class .)


state 6

    (6) body -> function .

    NLINE           reduce using rule 6 (body -> function .)


state 7

    (7) body -> declaration .

    NLINE           reduce using rule 7 (body -> declaration .)


state 8

    (8) class -> CLASS . ID class_block
    (9) class -> CLASS . ID COLON ID class_block

    ID              shift and go to state 14


state 9

    (10) function -> FUNC . ID add_function params set_void init_block end_function
    (11) function -> FUNC . ID add_function params ARROW variable_primitive init_block end_function
    (12) function -> FUNC . ID error init_block

    ID              shift and go to state 15


state 10

    (13) declaration -> variable . ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> variable . ASSIGN array
    (15) declaration -> variable .
    (16) declaration -> variable . error NLINE

    ASSIGN          shift and go to state 16
    NLINE           reduce using rule 15 (declaration -> variable .)
    error           shift and go to state 17


state 11

    (110) variable -> VAR . ID add_var COLON type
    (111) variable -> VAR . ID error type
    (112) variable -> VAR . ID add_var COLON error NLINE

    ID              shift and go to state 18


state 12

    (1) program -> program1 program .

    $end            reduce using rule 1 (program -> program1 program .)


state 13

    (3) program1 -> body NLINE .

    NLINE           reduce using rule 3 (program1 -> body NLINE .)
    CLASS           reduce using rule 3 (program1 -> body NLINE .)
    FUNC            reduce using rule 3 (program1 -> body NLINE .)
    VAR             reduce using rule 3 (program1 -> body NLINE .)
    $end            reduce using rule 3 (program1 -> body NLINE .)


state 14

    (8) class -> CLASS ID . class_block
    (9) class -> CLASS ID . COLON ID class_block
    (29) class_block -> . LCURLY class_block1 RCURLY

    COLON           shift and go to state 20
    LCURLY          shift and go to state 21

    class_block                    shift and go to state 19

state 15

    (10) function -> FUNC ID . add_function params set_void init_block end_function
    (11) function -> FUNC ID . add_function params ARROW variable_primitive init_block end_function
    (12) function -> FUNC ID . error init_block
    (124) add_function -> .

    error           shift and go to state 23
    LPAREN          reduce using rule 124 (add_function -> .)

    add_function                   shift and go to state 22

state 16

    (13) declaration -> variable ASSIGN . push_operator bool_expr execute_priority_0
    (14) declaration -> variable ASSIGN . array
    (144) push_operator -> .
    (17) array -> . LBRACK array1 RBRACK

    LPAREN          reduce using rule 144 (push_operator -> .)
    INTLIT          reduce using rule 144 (push_operator -> .)
    FLOATLIT        reduce using rule 144 (push_operator -> .)
    BOOLLIT         reduce using rule 144 (push_operator -> .)
    ID              reduce using rule 144 (push_operator -> .)
    STRINGLIT       reduce using rule 144 (push_operator -> .)
    BSLASH          reduce using rule 144 (push_operator -> .)
    LBRACK          shift and go to state 26

    push_operator                  shift and go to state 24
    array                          shift and go to state 25

state 17

    (16) declaration -> variable error . NLINE

    NLINE           shift and go to state 27


state 18

    (110) variable -> VAR ID . add_var COLON type
    (111) variable -> VAR ID . error type
    (112) variable -> VAR ID . add_var COLON error NLINE
    (130) add_var -> .

    error           shift and go to state 29
    COLON           reduce using rule 130 (add_var -> .)

    add_var                        shift and go to state 28

state 19

    (8) class -> CLASS ID class_block .

    NLINE           reduce using rule 8 (class -> CLASS ID class_block .)


state 20

    (9) class -> CLASS ID COLON . ID class_block

    ID              shift and go to state 30


state 21

    (29) class_block -> LCURLY . class_block1 RCURLY
    (30) class_block1 -> . class_block2
    (31) class_block1 -> . class_block3 class_block2
    (32) class_block2 -> . NLINE class_block1
    (33) class_block2 -> . NLINE
    (34) class_block3 -> . function
    (35) class_block3 -> . declaration
    (10) function -> . FUNC ID add_function params set_void init_block end_function
    (11) function -> . FUNC ID add_function params ARROW variable_primitive init_block end_function
    (12) function -> . FUNC ID error init_block
    (13) declaration -> . variable ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> . variable ASSIGN array
    (15) declaration -> . variable
    (16) declaration -> . variable error NLINE
    (110) variable -> . VAR ID add_var COLON type
    (111) variable -> . VAR ID error type
    (112) variable -> . VAR ID add_var COLON error NLINE

    NLINE           shift and go to state 34
    FUNC            shift and go to state 9
    VAR             shift and go to state 11

    class_block1                   shift and go to state 31
    class_block2                   shift and go to state 32
    class_block3                   shift and go to state 33
    function                       shift and go to state 35
    declaration                    shift and go to state 36
    variable                       shift and go to state 10

state 22

    (10) function -> FUNC ID add_function . params set_void init_block end_function
    (11) function -> FUNC ID add_function . params ARROW variable_primitive init_block end_function
    (20) params -> . LPAREN params1 RPAREN
    (21) params -> . LPAREN RPAREN
    (22) params -> . LPAREN error RPAREN

    LPAREN          shift and go to state 38

    params                         shift and go to state 37

state 23

    (12) function -> FUNC ID error . init_block
    (36) init_block -> . LCURLY init_block1 RCURLY

    LCURLY          shift and go to state 40

    init_block                     shift and go to state 39

state 24

    (13) declaration -> variable ASSIGN push_operator . bool_expr execute_priority_0
    (78) bool_expr -> . relational_exp execute_priority_1
    (79) bool_expr -> . relational_exp execute_priority_1 AND push_operator bool_expr
    (80) bool_expr -> . relational_exp execute_priority_1 OR push_operator bool_expr
    (81) relational_exp -> . expression execute_priority_2 comp relational_exp
    (82) relational_exp -> . expression execute_priority_2
    (83) expression -> . term execute_priority_3
    (84) expression -> . term execute_priority_3 PLUS push_operator expression
    (85) expression -> . term execute_priority_3 MINUS push_operator expression
    (86) term -> . factor execute_priority_4
    (87) term -> . factor execute_priority_4 TIMES push_operator term
    (88) term -> . factor execute_priority_4 DIVIDE push_operator term
    (89) term -> . factor execute_priority_4 TIMES error push_operator term
    (90) term -> . factor execute_priority_4 DIVIDE error push_operator term
    (91) factor -> . constant
    (92) factor -> . LPAREN push_operator bool_expr RPAREN push_operator
    (93) factor -> . LPAREN push_operator error RPAREN push_operator
    (95) constant -> . INTLIT add_constant
    (96) constant -> . FLOATLIT add_constant
    (97) constant -> . BOOLLIT add_constant
    (98) constant -> . string
    (99) constant -> . call
    (100) constant -> . call_array
    (101) constant -> . constant2
    (120) string -> . string_expr
    (121) string -> . string_expr string
    (69) call -> . ID LPAREN call1 RPAREN
    (94) call_array -> . ID LBRACK expression RBRACK
    (102) constant2 -> . ID push_variable
    (103) constant2 -> . ID PERIOD constant2
    (122) string_expr -> . STRINGLIT add_constant
    (123) string_expr -> . BSLASH LPAREN expression RPAREN

    LPAREN          shift and go to state 47
    INTLIT          shift and go to state 48
    FLOATLIT        shift and go to state 49
    BOOLLIT         shift and go to state 50
    ID              shift and go to state 56
    STRINGLIT       shift and go to state 57
    BSLASH          shift and go to state 58

    bool_expr                      shift and go to state 41
    relational_exp                 shift and go to state 42
    expression                     shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    constant                       shift and go to state 46
    string                         shift and go to state 51
    call                           shift and go to state 52
    call_array                     shift and go to state 53
    constant2                      shift and go to state 54
    string_expr                    shift and go to state 55

state 25

    (14) declaration -> variable ASSIGN array .

    NLINE           reduce using rule 14 (declaration -> variable ASSIGN array .)


state 26

    (17) array -> LBRACK . array1 RBRACK
    (18) array1 -> . expression COMMA array1
    (19) array1 -> . expression
    (83) expression -> . term execute_priority_3
    (84) expression -> . term execute_priority_3 PLUS push_operator expression
    (85) expression -> . term execute_priority_3 MINUS push_operator expression
    (86) term -> . factor execute_priority_4
    (87) term -> . factor execute_priority_4 TIMES push_operator term
    (88) term -> . factor execute_priority_4 DIVIDE push_operator term
    (89) term -> . factor execute_priority_4 TIMES error push_operator term
    (90) term -> . factor execute_priority_4 DIVIDE error push_operator term
    (91) factor -> . constant
    (92) factor -> . LPAREN push_operator bool_expr RPAREN push_operator
    (93) factor -> . LPAREN push_operator error RPAREN push_operator
    (95) constant -> . INTLIT add_constant
    (96) constant -> . FLOATLIT add_constant
    (97) constant -> . BOOLLIT add_constant
    (98) constant -> . string
    (99) constant -> . call
    (100) constant -> . call_array
    (101) constant -> . constant2
    (120) string -> . string_expr
    (121) string -> . string_expr string
    (69) call -> . ID LPAREN call1 RPAREN
    (94) call_array -> . ID LBRACK expression RBRACK
    (102) constant2 -> . ID push_variable
    (103) constant2 -> . ID PERIOD constant2
    (122) string_expr -> . STRINGLIT add_constant
    (123) string_expr -> . BSLASH LPAREN expression RPAREN

    LPAREN          shift and go to state 47
    INTLIT          shift and go to state 48
    FLOATLIT        shift and go to state 49
    BOOLLIT         shift and go to state 50
    ID              shift and go to state 56
    STRINGLIT       shift and go to state 57
    BSLASH          shift and go to state 58

    array1                         shift and go to state 59
    expression                     shift and go to state 60
    term                           shift and go to state 44
    factor                         shift and go to state 45
    constant                       shift and go to state 46
    string                         shift and go to state 51
    call                           shift and go to state 52
    call_array                     shift and go to state 53
    constant2                      shift and go to state 54
    string_expr                    shift and go to state 55

state 27

    (16) declaration -> variable error NLINE .

    NLINE           reduce using rule 16 (declaration -> variable error NLINE .)


state 28

    (110) variable -> VAR ID add_var . COLON type
    (112) variable -> VAR ID add_var . COLON error NLINE

    COLON           shift and go to state 61


state 29

    (111) variable -> VAR ID error . type
    (113) type -> . variable_primitive
    (114) type -> . LBRACK variable_primitive RBRACK
    (115) type -> . LBRACK ID RBRACK
    (116) variable_primitive -> . INT set_variable_type
    (117) variable_primitive -> . FLOAT set_variable_type
    (118) variable_primitive -> . STRING set_variable_type
    (119) variable_primitive -> . BOOL set_variable_type

    LBRACK          shift and go to state 64
    INT             shift and go to state 65
    FLOAT           shift and go to state 66
    STRING          shift and go to state 67
    BOOL            shift and go to state 68

    type                           shift and go to state 62
    variable_primitive             shift and go to state 63

state 30

    (9) class -> CLASS ID COLON ID . class_block
    (29) class_block -> . LCURLY class_block1 RCURLY

    LCURLY          shift and go to state 21

    class_block                    shift and go to state 69

state 31

    (29) class_block -> LCURLY class_block1 . RCURLY

    RCURLY          shift and go to state 70


state 32

    (30) class_block1 -> class_block2 .

    RCURLY          reduce using rule 30 (class_block1 -> class_block2 .)


state 33

    (31) class_block1 -> class_block3 . class_block2
    (32) class_block2 -> . NLINE class_block1
    (33) class_block2 -> . NLINE

    NLINE           shift and go to state 34

    class_block2                   shift and go to state 71

state 34

    (32) class_block2 -> NLINE . class_block1
    (33) class_block2 -> NLINE .
    (30) class_block1 -> . class_block2
    (31) class_block1 -> . class_block3 class_block2
    (32) class_block2 -> . NLINE class_block1
    (33) class_block2 -> . NLINE
    (34) class_block3 -> . function
    (35) class_block3 -> . declaration
    (10) function -> . FUNC ID add_function params set_void init_block end_function
    (11) function -> . FUNC ID add_function params ARROW variable_primitive init_block end_function
    (12) function -> . FUNC ID error init_block
    (13) declaration -> . variable ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> . variable ASSIGN array
    (15) declaration -> . variable
    (16) declaration -> . variable error NLINE
    (110) variable -> . VAR ID add_var COLON type
    (111) variable -> . VAR ID error type
    (112) variable -> . VAR ID add_var COLON error NLINE

    RCURLY          reduce using rule 33 (class_block2 -> NLINE .)
    NLINE           shift and go to state 34
    FUNC            shift and go to state 9
    VAR             shift and go to state 11

    class_block1                   shift and go to state 72
    class_block2                   shift and go to state 32
    class_block3                   shift and go to state 33
    function                       shift and go to state 35
    declaration                    shift and go to state 36
    variable                       shift and go to state 10

state 35

    (34) class_block3 -> function .

    NLINE           reduce using rule 34 (class_block3 -> function .)


state 36

    (35) class_block3 -> declaration .

    NLINE           reduce using rule 35 (class_block3 -> declaration .)


state 37

    (10) function -> FUNC ID add_function params . set_void init_block end_function
    (11) function -> FUNC ID add_function params . ARROW variable_primitive init_block end_function
    (125) set_void -> .

    ARROW           shift and go to state 74
    LCURLY          reduce using rule 125 (set_void -> .)

    set_void                       shift and go to state 73

state 38

    (20) params -> LPAREN . params1 RPAREN
    (21) params -> LPAREN . RPAREN
    (22) params -> LPAREN . error RPAREN
    (23) params1 -> . param
    (24) params1 -> . param COMMA params1
    (25) params1 -> . error COMMA params1
    (26) param -> . ID add_param COLON variable_primitive
    (27) param -> . ID error variable_primitive
    (28) param -> . error COLON variable_primitive

    RPAREN          shift and go to state 76
    error           shift and go to state 77
    ID              shift and go to state 79

    params1                        shift and go to state 75
    param                          shift and go to state 78

state 39

    (12) function -> FUNC ID error init_block .

    NLINE           reduce using rule 12 (function -> FUNC ID error init_block .)


state 40

    (36) init_block -> LCURLY . init_block1 RCURLY
    (37) init_block1 -> . init_block2
    (38) init_block1 -> . init_block3 init_block2
    (39) init_block2 -> . NLINE init_block1
    (40) init_block2 -> . NLINE
    (41) init_block3 -> . statement
    (42) init_block3 -> . declaration
    (48) statement -> . display
    (49) statement -> . if
    (50) statement -> . while
    (51) statement -> . input
    (52) statement -> . assign
    (53) statement -> . call
    (54) statement -> . return
    (55) statement -> . error
    (13) declaration -> . variable ASSIGN push_operator bool_expr execute_priority_0
    (14) declaration -> . variable ASSIGN array
    (15) declaration -> . variable
    (16) declaration -> . variable error NLINE
    (58) display -> . PRINT push_operator LPAREN bool_expr RPAREN execute_builtin_call
    (72) if -> . if_single
    (73) if -> . if_multiple
    (56) while -> . WHILE LPAREN save_loop_start bool_expr set_loop_condition RPAREN block fill_and_reset_loop
    (57) input -> . variable ASSIGN INPUT LPAREN string RPAREN
    (61) assign -> . ID push_variable assign1 bool_expr execute_priority_0
    (62) assign -> . ID push_variable error execute_priority_0
    (63) assign -> . ID push_variable assign1 error execute_priority_0
    (69) call -> . ID LPAREN call1 RPAREN
    (59) return -> . RETURN
    (60) return -> . RETURN push_operator bool_expr set_return
    (110) variable -> . VAR ID add_var COLON type
    (111) variable -> . VAR ID error type
    (112) variable -> . VAR ID add_var COLON error NLINE
    (74) if_single -> . IF LPAREN bool_expr RPAREN get_conditional block fill_end_single
    (75) if_multiple -> . IF LPAREN bool_expr RPAREN get_conditional block if_multiple_2

    NLINE           shift and go to state 83
    error           shift and go to state 93
    PRINT           shift and go to state 95
    WHILE           shift and go to state 98
    ID              shift and go to state 99
    RETURN          shift and go to state 100
    VAR             shift and go to state 11
    IF              shift and go to state 101

    init_block1                    shift and go to state 80
    init_block2                    shift and go to state 81
    init_block3                    shift and go to state 82
    statement                      shift and go to state 84
    declaration                    shift and go to state 85
    display                        shift and go to state 86
    if                             shift and go to state 87
    while                          shift and go to state 88
    input                          shift and go to state 89
    assign                         shift and go to state 90
    call                           shift and go to state 91
    return                         shift and go to state 92
    variable                       shift and go to state 94
    if_single                      shift and go to state 96
    if_multiple                    shift and go to state 97

state 41

    (13) declaration -> variable ASSIGN push_operator bool_expr . execute_priority_0
    (131) execute_priority_0 -> .

    NLINE           reduce using rule 131 (execute_priority_0 -> .)

    execute_priority_0             shift and go to state 102

state 42

    (78) bool_expr -> relational_exp . execute_priority_1
    (79) bool_expr -> relational_exp . execute_priority_1 AND push_operator bool_expr
    (80) bool_expr -> relational_exp . execute_priority_1 OR push_operator bool_expr
    (133) execute_priority_1 -> .

    AND             reduce using rule 133 (execute_priority_1 -> .)
    OR              reduce using rule 133 (execute_priority_1 -> .)
    NLINE           reduce using rule 133 (execute_priority_1 -> .)
    RPAREN          reduce using rule 133 (execute_priority_1 -> .)

    execute_priority_1             shift and go to state 103

state 43

    (81) relational_exp -> expression . execute_priority_2 comp relational_exp
    (82) relational_exp -> expression . execute_priority_2
    (134) execute_priority_2 -> .

    LESS            reduce using rule 134 (execute_priority_2 -> .)
    MORE            reduce using rule 134 (execute_priority_2 -> .)
    EQUALS          reduce using rule 134 (execute_priority_2 -> .)
    NEQUALS         reduce using rule 134 (execute_priority_2 -> .)
    LEQUALS         reduce using rule 134 (execute_priority_2 -> .)
    MEQUALS         reduce using rule 134 (execute_priority_2 -> .)
    AND             reduce using rule 134 (execute_priority_2 -> .)
    OR              reduce using rule 134 (execute_priority_2 -> .)
    NLINE           reduce using rule 134 (execute_priority_2 -> .)
    RPAREN          reduce using rule 134 (execute_priority_2 -> .)

    execute_priority_2             shift and go to state 104

state 44

    (83) expression -> term . execute_priority_3
    (84) expression -> term . execute_priority_3 PLUS push_operator expression
    (85) expression -> term . execute_priority_3 MINUS push_operator expression
    (135) execute_priority_3 -> .

    PLUS            reduce using rule 135 (execute_priority_3 -> .)
    MINUS           reduce using rule 135 (execute_priority_3 -> .)
    LESS            reduce using rule 135 (execute_priority_3 -> .)
    MORE            reduce using rule 135 (execute_priority_3 -> .)
    EQUALS          reduce using rule 135 (execute_priority_3 -> .)
    NEQUALS         reduce using rule 135 (execute_priority_3 -> .)
    LEQUALS         reduce using rule 135 (execute_priority_3 -> .)
    MEQUALS         reduce using rule 135 (execute_priority_3 -> .)
    AND             reduce using rule 135 (execute_priority_3 -> .)
    OR              reduce using rule 135 (execute_priority_3 -> .)
    NLINE           reduce using rule 135 (execute_priority_3 -> .)
    COMMA           reduce using rule 135 (execute_priority_3 -> .)
    RBRACK          reduce using rule 135 (execute_priority_3 -> .)
    RPAREN          reduce using rule 135 (execute_priority_3 -> .)

    execute_priority_3             shift and go to state 105

state 45

    (86) term -> factor . execute_priority_4
    (87) term -> factor . execute_priority_4 TIMES push_operator term
    (88) term -> factor . execute_priority_4 DIVIDE push_operator term
    (89) term -> factor . execute_priority_4 TIMES error push_operator term
    (90) term -> factor . execute_priority_4 DIVIDE error push_operator term
    (136) execute_priority_4 -> .
